conect to genius and get data

--- a/popup.html
+++ b/popup.html
@@ -36,11 +36,9 @@
           </select>
         </div>
         <div id="track-display">
-          <h3 id="track">Train Wreck by James Arthur</h3>
+          <h3 id="track"></h3>
 
-          <div id="lyrics-container">
-            <p>I saw you dancing</p>
-          </div>
+          <div id="lyrics-container"></div>
         </div>
         <!-- 
         <button class="translate-button">Translate Lyrics</button> -->
