get lyrics from scraping genius

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
         <h2>SpotifyTranslate</h2>
         <hr />
       </div>
-      <div id="main-container" style="display: none">
+      <div id="main-container">
         <div id="main-text">
           <h3>Sing Along!</h3>
           <p>
