showing translated text

--- a/popup.html
+++ b/popup.html
@@ -31,14 +31,13 @@
       <div id="track-info" style="display: none">
         <div class="language-selector">
           <label for="language">Translate to:</label>
-          <select id="language">
-            <option>English</option>
-          </select>
+          <select id="language"></select>
         </div>
         <div id="track-display">
           <h3 id="track"></h3>
 
           <div id="lyrics-container"></div>
+          <div id="translated-lyrics-container"></div>
         </div>
         <!-- 
         <button class="translate-button">Translate Lyrics</button> -->
