--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,57 @@
       <div id="main-container">
         <div class="language-selector">
           <label for="language">Translate to:</label>
-          <select id="language"></select>
+          <select
+            id="language"
+            size="1"
+            onfocus="this.size=10;"
+            onblur="this.size=1;"
+            onchange="this.size=1; this.blur();"
+          >
+            <option value="en">English</option>
+            <option value="es">Spanish</option>
+            <option value="fr">French</option>
+            <option value="de">German</option>
+            <option value="it">Italian</option>
+            <option value="pt">Portuguese</option>
+            <option value="ru">Russian</option>
+            <option value="ja">Japanese</option>
+            <option value="ko">Korean</option>
+            <option value="zh">Chinese</option>
+            <option value="hi">Hindi</option>
+            <option value="ar">Arabic</option>
+            <option value="bn">Bengali</option>
+            <option value="tr">Turkish</option>
+            <option value="pa">Punjabi</option>
+            <option value="vi">Vietnamese</option>
+            <option value="pl">Polish</option>
+            <option value="ro">Romanian</option>
+            <option value="th">Thai</option>
+            <option value="ms">Malay</option>
+            <option value="sv">Swedish</option>
+            <option value="uk">Ukrainian</option>
+            <option value="he">Hebrew</option>
+            <option value="ta">Tamil</option>
+            <option value="ml">Malayalam</option>
+            <option value="el">Greek</option>
+            <option value="cs">Czech</option>
+            <option value="hu">Hungarian</option>
+            <option value="sk">Slovak</option>
+            <option value="fi">Finnish</option>
+            <option value="no">Norwegian</option>
+            <option value="da">Danish</option>
+            <option value="sr">Serbian</option>
+            <option value="hr">Croatian</option>
+            <option value="bg">Bulgarian</option>
+            <option value="lt">Lithuanian</option>
+            <option value="lv">Latvian</option>
+            <option value="et">Estonian</option>
+            <option value="sw">Swahili</option>
+            <option value="my">Burmese</option>
+            <option value="km">Khmer</option>
+            <option value="si">Sinhalese</option>
+            <option value="ne">Nepali</option>
+          </select>
         </div>
         <div class="now-playing" style="display: none">
           <p>Currently Playing:</p>
@@ -29,28 +79,11 @@
             </div>
           </div>
         </div>
-        <div class="error-container" style="display: none">
-          <svg
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M10.5 9.90003V5.41447M10.5 13.2248V13.2642M16.1699 17H4.83007C3.2811 17 1.97392 15.9763 1.56265 14.5757C1.38709 13.9778 1.60281 13.3551 1.93276 12.8249L7.60269 2.60102C8.9311 0.466323 12.0689 0.466326 13.3973 2.60103L19.0672 12.8249C19.3972 13.3551 19.6129 13.9778 19.4373 14.5757C19.0261 15.9763 17.7189 17 16.1699 17Z"
-              stroke="#E94D42"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
-          <p>Something went wrong.</p>
-          <button class="retry-button">Retry</button>
-        </div>
       </div>
     </div>
-
+    <!-- onfocus="this.size=10;"
+            onblur="this.size=10;"
+            onchange="this.size=10; this.blur();" -->
     <script src="popup.js" type="module"></script>
   </body>
 </html>
